--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@ng-bootstrap/ng-bootstrap": "15.1.2",
     "bootstrap": "^5.3.2",
     "faker": "^6.6.6",
+    "ngx-spinner": "^16.0.2",
     "ol": "^8.1.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
