--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.14",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "^16.2.14",
+    "@angular/material-moment-adapter": "^17.1.2",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
@@ -22,6 +25,7 @@
     "@ng-bootstrap/ng-bootstrap": "15.1.2",
     "bootstrap": "^5.3.2",
     "faker": "^6.6.6",
+    "moment": "^2.30.1",
     "ngx-spinner": "^16.0.2",
     "ol": "^8.1.0",
     "rxjs": "~7.8.0",
