--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,10 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
+    "allowSyntheticDefaultImports": true,
     "module": "ES2022",
     "useDefineForClassFields": false,
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
@@ -32,5 +30,3 @@
     "strictTemplates": true
   }
 }
-
-
