--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-spinner": "^16.0.2",
     "ol": "^8.1.0",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
