--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
     "allowSyntheticDefaultImports": true,
     "module": "ES2022",
     "useDefineForClassFields": false,
+    "strictNullChecks": false,
     "lib": ["ES2022", "dom"]
   },
   "angularCompilerOptions": {
