--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^5.3.2",
     "faker": "^6.6.6",
     "moment": "^2.30.1",
+    "ngx-socket-io": "^4.6.1",
     "ngx-spinner": "^16.0.2",
     "ol": "^8.1.0",
     "rxjs": "~7.8.0",
